Content changes, spacing fixes

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -501,6 +501,8 @@ ul.nav.nav-tabs {
 		}
 		img {
 			width: 100%;
+			height: 100%;
+			object-fit: cover;
 		}
 		.charitable-percent {
 			position: absolute;
@@ -665,6 +667,7 @@ input[type=range]:focus::-ms-fill-upper {
 		}
 	}
 	h3 {
+		min-height: 44px;
 		margin: 0;
 		font-size: 2rem;
 	}
