--- a/client/templates/featured/shop.less
+++ b/client/templates/featured/shop.less
@@ -48,6 +48,9 @@
 					overflow: hidden;
 				}
 			}
+			.vendor {
+				font-size: 15px;
+			}
 			.product-options {
 				.col-xs-8 {
 					margin: 10px 0;
